test/good/dictionaries/order03.px

d = {for i in 1..10 yield i: i %% 2}
print d.pop(), d.pop().b, d.pop().a
print [...d by 4]
