test/bad/dictionaries/comprehension01.px

{for d in [{:}] yield ...:d}
